Convert Packr build system to Gradle
Moved everything into new Gradle projects, download DrOpt as part of the source and added a Gradle build for it

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Mario Zechner, badlogic, contact at badlogicgames dot com
 Daniel Ludwig, code-disaster, codi at code-disaster dot com
+Karl Sabo, Nimbly Games, karl@nimblygames.com
