--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Mario Zechner, badlogic, contact at badlogicgames dot com
 Daniel Ludwig, code-disaster, codi at code-disaster dot com
 Karl Sabo, Nimbly Games, karl@nimblygames.com
+petoncle, albert.petoncle47@gmail.com
